<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RXCycleAppSandBox</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_thread_test">ThreadTest</string>
    <string name="title_activity_async_task_test">AsyncTaskTest</string>
    <string name="title_activity_graph_test">GraphTest</string>
    <string name="title_activity_run_on_uithread_test">RunOnUIThreadTest</string>
    <string name="title_activity_sound_fxtest">SoundFXTest</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="album">album</string>
    <string name="next">NEXT</string>
    <string name="prev">PREV</string>
    <string name="siba">SIBA</string>
    <string name="pause">PAUSE</string>
    <string name="samplelyric">어느새 빗물이 내 발목에 고이고\n차가운 눈물이 내눈 가에 흐르\n</string>
    <string name="title_activity_full_google_map_usage">FullGoogleMapUsage</string>
    <string name="title_activity_jquery_test_one">JQueryTestOne</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_jquery_test_two">JQueryTestTwo</string>
    <string name="title_activity_call_back_test">CallBackTest</string>
    <string name="up">up</string>
    <string name="down">down</string>
    <string name="resetvalue">resetValue</string>
    <string name="title_activity_bluetooth_test">BluetoothTest</string>
    <string name="button_scan">Scan for devices</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="connect_">Connect!</string>
    <string name="ble">BLE</string>
    <string name="title_activity_example_bt">ExampleBT</string>
    <string name="title_activity_down_image">DownImage</string>
    <string name="title_activity_android_cmm_example">AndroidCmmExample</string>
    <string name="title_activity_intent_test">IntentTest</string>
    <string name="title_activity_bike_controller">BikeController</string>
    <string name="title_activity_widget_library">WidgetLibrary</string>
    <string name="title_activity_web_view_master">WebViewMaster</string>

</resources>